src/styles/variables/toggledVariables.scss
// This is only imported in globals.scss

html[data-theme="dark"] {
  --bgColor-1: hsl(252, 10%, 10%);
  --bgColor-2: hsl(252, 19%, 15%);
  --bgColor-3: hsl(255, 20%, 20%);
  --bgColor-3-hover: hsl(255, 20%, 30%);
  --bgColorContent: hsl(255, 11%, 15%);
  --primaryColor: hsl(205, 50%, 25%);
  --secondaryColor: hsl(294, 50%, 25%);
  --textColor: hsl(0, 0%, 90%);

  --cardShadow: 0 0 0 0.075rem rgba(150, 150, 150, 0.5);
  --cardShadowHover: 0 0 0 0.1rem rgba(150, 150, 150, 0.9);
}
html[data-theme="light"] {
  --bgColor-1: hsl(0, 0%, 100%);
  --bgColor-2: hsl(313, 100%, 98%);
  --bgColor-3: hsl(334, 100%, 94%);
  --bgColor-3-hover: hsl(313, 35%, 81%);
  --primaryColor: hsl(205, 100%, 50%);
  --secondaryColor: hsl(294, 100%, 50%);
  --textColor: hsl(0, 0%, 10%);

  --cardShadow: 0 0.05rem 0.2rem 0.05rem rgba(0, 0, 0, 0.15);
  --cardShadowHover: 0 0.1rem 0.5rem 0.15rem rgba(0, 0, 0, 0.2);
}

